Additional cleanup of missed spellings, all chapters
Fixed stray/wrong apostrophes and quotes, more British spelling
cleanup, the correct spelling of Gödel ;-)

--- a/008.md
+++ b/008.md
@@ -352,7 +352,7 @@ Harry Potter’s face gleamed with pride. “I *make* it that peculiar. You’re
 
 “So…” Hermione said, and trailed off awkwardly.
 
-“So,” Harry Potter said, “how much science do you know exactly? I can do calculus and I know some Bayesian probability theory and decision theory and a lot of cognitive science, and I’ve read *The Feynman Lectures* (or volume 1 anyway) and *Judgment Under Uncertainty: Heuristics and Biases* and *Language in Thought and Action* and *Influence: Science and Practice* and *Rational Choice in an Uncertain World* and *Godel, Escher, Bach* and *A Step Farther Out* and—”
+“So,” Harry Potter said, “how much science do you know exactly? I can do calculus and I know some Bayesian probability theory and decision theory and a lot of cognitive science, and I’ve read *The Feynman Lectures* (or volume 1 anyway) and *Judgment Under Uncertainty: Heuristics and Biases* and *Language in Thought and Action* and *Influence: Science and Practice* and *Rational Choice in an Uncertain World* and *Gödel, Escher, Bach* and *A Step Farther Out* and—”
 
 The ensuing quiz and counter-quiz went on for several minutes before being interrupted by another timid knock at the door. “Come in,” she and Harry Potter said at almost the same time, and it slid back to reveal Neville Longbottom.
 
