--- a/009.md
+++ b/009.md
@@ -149,7 +149,7 @@ And Harry would protect them again. If there was in fact a prophecy and that was
 
 All those people believing in him and cheering him—Harry couldn’t stand to let that be false. To flash and fade like so many other child prodigies. To be a disappointment. To fail to live up to his reputation as a symbol of the Light, never mind *how* he’d gotten it. He would absolutely, positively, no matter how long it took and even if it killed him, fulfil their expectations. And then go on to *exceed* those expectations, so that people wondered, looking back, that they had once asked so little of him.
 
-*“HARRY POTTER! HARRY POTTER! HARRY POTTER!*“
+*“HARRY POTTER! HARRY POTTER! HARRY POTTER!”*
 
 Harry took his last steps towards the Sorting Hat. He swept a bow to the Order of Chaos at the Gryffindor table, and then turned and swept another bow to the other side of the hall, and waited for the applause and giggling to die away.
 
