--- a/062.md
+++ b/062.md
@@ -90,7 +90,7 @@ Harry then put that envelope inside another envelope, which already contained an
 
 He closed that envelope (which already had a name written on the outside), sealed it with more green wax, and pressed a final Sickle into that seal.
 
-Then Harry put *that* envelope into the very last envelope on which was written in large letters the name “Merry Tavington".
+Then Harry put *that* envelope into the very last envelope on which was written in large letters the name “Merry Tavington”.
 
 And Harry peeked around the bend to where the scowling portrait that served as the door to the Slytherin dorms waited; and as he did not wish the portrait to recall not-seeing anyone invisible, Harry used the Hover Charm to float the envelope to the scowling man, and tap it against him.
 
@@ -116,7 +116,7 @@ Well, it had been obvious to Professor Quirrell, anyway.
 
 It had also been obvious to Professor Quirrell that (a) Margaret Bulstrode had a Time-Turner and (b) she wasn’t very strict about how she used it, e.g. telling her younger sister really good pieces of gossip “before” anyone else had heard.
 
-Some of the tension leaked off Harry as he strode away from the portrait door, still invisible. Somehow his mind had still managed to worry about the plan, even *knowing* that it had already succeeded. Now there remained only the confrontation with Dumbledore, and then he was done for the day… he’d go to the Headmaster’s gargoyles at 9PM, since doing it at 8PM would seem more suspicious. This way he could claim that he’d just misunderstood what Professor McGonagall had meant by “afterward"…
+Some of the tension leaked off Harry as he strode away from the portrait door, still invisible. Somehow his mind had still managed to worry about the plan, even *knowing* that it had already succeeded. Now there remained only the confrontation with Dumbledore, and then he was done for the day… he’d go to the Headmaster’s gargoyles at 9PM, since doing it at 8PM would seem more suspicious. This way he could claim that he’d just misunderstood what Professor McGonagall had meant by “afterward”…
 
 The obscure pain clutched at Harry’s heart again as he thought of Professor McGonagall.
 
