--- a/063.md
+++ b/063.md
@@ -3,7 +3,7 @@
 
 *Aftermath, Hermione Granger:*
 
-She was just starting to close up her books and put away her homework in preparation for sleep, Padma and Mandy stacking up their own books across the table from her, when Harry Potter walked into the Ravenclaw common room; and it was only then that she realized, she hadn’t seen him at all since breakfast.
+She was just starting to close up her books and put away her homework in preparation for sleep, Padma and Mandy stacking up their own books across the table from her, when Harry Potter walked into the Ravenclaw common room; and it was only then that she realised, she hadn’t seen him at all since breakfast.
 
 That realisation was rapidly stomped-on by a much more startling one.
 
@@ -261,7 +261,7 @@ Harry’s hand grasped a fork, lifted a bite of mashed potatoes toward his mouth
 
 And there was a shriek.
 
-Every now and then someone would shout when they heard the news, but Harry’s ears *recognized* this one—
+Every now and then someone would shout when they heard the news, but Harry’s ears *recognised* this one—
 
 Harry was up from the bench in an instant, heading toward the Hufflepuff table, a horrible sick feeling dawning in the pit of his stomach. It was one of those things he hadn’t considered when he’d decided to commit the crime, because Professor Quirrell had planned for no one to know; and now, afterward, Harry just—hadn’t *thought* of it—
 
@@ -347,7 +347,7 @@ Lesath Lestrange said, in a breaking voice, “My life is yours, my Lord, and my
 
 “I,” Harry said, there was a huge lump in his throat and he was having trouble speaking, “I—”*didn’t have anything to do with it,* he should have been saying, should be saying *right now,* but then again the innocent Harry would have had trouble speaking too—
 
-“Thank you,” whispered Lesath, “thank you, my Lord, oh, thank you,” the sound of a choked-off sob came from the kneeling boy, all Harry could see of him was the hair on the back of his head, nothing of his face. “I’m a fool, my Lord, an ungrateful bastard, unworthy to serve you, I cannot abase myself enough, for I—I shouted at you after you helped me, because I thought you were refusing me, and I didn’t even realize until this morning that I’d been such a fool as to ask you in front of Longbottom—”
+“Thank you,” whispered Lesath, “thank you, my Lord, oh, thank you,” the sound of a choked-off sob came from the kneeling boy, all Harry could see of him was the hair on the back of his head, nothing of his face. “I’m a fool, my Lord, an ungrateful bastard, unworthy to serve you, I cannot abase myself enough, for I—I shouted at you after you helped me, because I thought you were refusing me, and I didn’t even realise until this morning that I’d been such a fool as to ask you in front of Longbottom—”
 
 “I didn’t have anything to do with it,” Harry said.
 
@@ -535,7 +535,7 @@ Yesterday, Albus Dumbledore had told Mad-Eye Moody that the Dark Lord had used u
 
 Someone else might have reacted with incredulity.
 
-“I can’t believe you lot never told me about this resurrection thing,” Mad-Eye Moody said with considerable acerbity. “D’you realize how long it’ll take me to do the grave of every ancestor of every Dark Wizard I’ve ever killed who could’ve been smart enough to make a horcrux? You’re not just *now* doing this one, are you?”
+“I can’t believe you lot never told me about this resurrection thing,” Mad-Eye Moody said with considerable acerbity. “D’you realise how long it’ll take me to do the grave of every ancestor of every Dark Wizard I’ve ever killed who could’ve been smart enough to make a horcrux? You’re not just *now* doing this one, are you?”
 
 “I redose this one every year,” Severus Snape said calmly, uncapping the third flask of what the man had *claimed* would be seventeen bottles, and beginning to wave his wand over it. “The other ancestral graves we’ve been able to locate were poisoned with only the long-lasting substances, since some of us have less free time than yourself.”
 
