--- a/064.md
+++ b/064.md
@@ -89,7 +89,7 @@ With a critical eye, Peter looked over the encamped Centaurs with their bows, Be
 
 “They’d scare *me*, if I had to fight ’em,” Peter said finally, “but I don’t know if it’s enough to beat… *her.*”
 
-“You don’t suppose this mysterious lion will actually show up and help us, d'you?” said Lucy. Her voice was very quiet, so that none of the creatures around them would hear. “Only it’d be nice to really have him, don’t you think, instead of just letting people think that he put us in charge?”
+“You don’t suppose this mysterious lion will actually show up and help us, d’you?” said Lucy. Her voice was very quiet, so that none of the creatures around them would hear. “Only it’d be nice to really have him, don’t you think, instead of just letting people think that he put us in charge?”
 
 Susan shook her head, shaking the magical arrows in the quiver on her back. “If there was really someone like that,” Susan said, “he wouldn’t have let the White Witch cover the land in winter for a hundred years, would he?”
 
@@ -229,7 +229,7 @@ UTILITARIAN TWILIGHT
 
 “Bella,” Edward said, and swallowed desperately. “Bella—”
 
-“Immortality. Perfect health. Awakening psychic powers. Easy enough to survive on animal blood once you do it. Even the beauty, Edward, there are people who would give their lives to be pretty, and don’t you dare call them shallow until you’ve tried being ugly. Do you think I’m scared of the word ’vampire'? I’m tired of your arbitrary deontological constraints, Edward. The whole human species ought to be in on your fun, and people are dying by the thousands even as you hesitate.”
+“Immortality. Perfect health. Awakening psychic powers. Easy enough to survive on animal blood once you do it. Even the beauty, Edward, there are people who would give their lives to be pretty, and don’t you dare call them shallow until you’ve tried being ugly. Do you think I’m scared of the word ‘vampire’? I’m tired of your arbitrary deontological constraints, Edward. The whole human species ought to be in on your fun, and people are dying by the thousands even as you hesitate.”
 
 The gun in his lover’s hand was cold against his forehead. It wouldn’t kill him, but it would disable him for long enough—
 
