--- a/067.md
+++ b/067.md
@@ -57,7 +57,7 @@ Their tactic for the next battle, she and her officers had decided, would be to 
 
 It was a good strategy, she believed. And yet still, no matter how much she’d lectured her soldiers, they’d persisted in whispering fearful rumours about what Harry and Neville were learning to do. Finally she’d gone off and talked with Captain Goldstein, who understood things like Troop Morale, and Anthony had suggested—
 
-“That’s weird,” Captain Macmillan spoke up suddenly, frowning at the fiery and iridescent compasses he held in either hand. (Ernie was, as Harry would have termed it, “good at spatial visualisation", and so had been designated to hold both compasses and try to figure out what their enemies were doing.) “I think… Dragon’s not moving fast anymore… I think they got on the other side of Chaos from us first… and it looks like Chaos is moving to attack them instead of trying to manoeuvre out from in between?”
+“That’s weird,” Captain Macmillan spoke up suddenly, frowning at the fiery and iridescent compasses he held in either hand. (Ernie was, as Harry would have termed it, “good at spatial visualisation”, and so had been designated to hold both compasses and try to figure out what their enemies were doing.) “I think… Dragon’s not moving fast anymore… I think they got on the other side of Chaos from us first… and it looks like Chaos is moving to attack them instead of trying to manoeuvre out from in between?”
 
 Hermione frowned, trying to understand, and she saw similar frowns on the faces of Anthony and Ron. If Chaos and Dragon attacked each other straight out, and spent all their forces fighting each other, that was practically conceding the battle to Sunshine…
 
@@ -105,7 +105,7 @@ The two boys in their grey cloaks and robes, grey cloth over their faces, stood 
 
 Daphne heard a soft sigh from beside her, and when her head turned she saw that Hannah’s lips were parted, and the Hufflepuff girl’s eyes were huge, and she was staring at—
 
-It would have been hard to describe the jumble of thoughts that flashed through Daphne’s mind as she realized that Hannah was staring at Neville rather than Harry, which in turn seemed to trigger some part of her into noticing that in point of fact Neville *had* been getting pretty interesting lately as boys went, in fact right now the Last Scion of Longbottom was seeming downright *cool,* and something woke up inside her and her own lips parted and everything the Lady her Mother had ever instructed her about demure demeanors and flattery and scented shampoo blew straight out of her mind so hard it should have fluffed her hair about her ears, because she’d watched Hermione and Harry and she knew how she wanted *her* own courtship to go—
+It would have been hard to describe the jumble of thoughts that flashed through Daphne’s mind as she realised that Hannah was staring at Neville rather than Harry, which in turn seemed to trigger some part of her into noticing that in point of fact Neville *had* been getting pretty interesting lately as boys went, in fact right now the Last Scion of Longbottom was seeming downright *cool,* and something woke up inside her and her own lips parted and everything the Lady her Mother had ever instructed her about demure demeanors and flattery and scented shampoo blew straight out of her mind so hard it should have fluffed her hair about her ears, because she’d watched Hermione and Harry and she knew how she wanted *her* own courtship to go—
 
 Her Lady Mother had also recently instructed her on a few spells it might be embarrassing not to know if you belonged to the Noble and Most Ancient House of Greengrass.
 
@@ -165,7 +165,7 @@ The tip of Hermione’s own wand began making small motions in the air, a diamon
 
 Her wand kept rehearsing the diamond within the circle, over and over. Harry would be recharging his own strength, she knew, even as she practiced as much as she could before her attack. “I’m starting to think you need taking down a peg, General Chaos.”
 
-“You could be right,” Harry said equably. His feet began to shuffle through what she recognized as a duelist’s dance. “Unfortunately there’s nothing left that can defeat me now except another Harry Potter.”
+“You could be right,” Harry said equably. His feet began to shuffle through what she recognised as a duelist’s dance. “Unfortunately there’s nothing left that can defeat me now except another Harry Potter.”
 
 “Let me be specific, Mr. Potter. *I’m* taking you down a peg.”
 
@@ -201,7 +201,7 @@ He had enough strength now to fire again, but—
 
 *Stupidity is doing the same thing and expecting a different result,* Harry had said, this was *Harry’s* work somehow, it couldn’t be a Muggle artefact anymore but Draco couldn’t figure out what it *could* be, and he should be thinking of hypotheses and ways to test them but he was too busy frantically dodging as Theodore laughed and shot another Sleep Hex at him, Draco felt a little numbness in his side that time as he twisted, that had been a very very near miss and finally Draco couldn’t take it anymore, he didn’t bother working out what theory he was testing or why as he just—
 
-*“Luminos!”* shouted Draco, and Theodore was haloed in red light, *“Dulak!”* and it went out again (so Theodore *was* still being affected by magic), *“Expelliarmus!”* and Theodore’s wand went flying (that had been a good spell to cast anyway now that Draco realized it) but Theodore was rushing toward Draco with his arms outstretched to grapple so Draco yelled *“Flipendo!”* and the other boy’s feet were abruptly yanked up—
+*“Luminos!”* shouted Draco, and Theodore was haloed in red light, *“Dulak!”* and it went out again (so Theodore *was* still being affected by magic), *“Expelliarmus!”* and Theodore’s wand went flying (that had been a good spell to cast anyway now that Draco realised it) but Theodore was rushing toward Draco with his arms outstretched to grapple so Draco yelled *“Flipendo!”* and the other boy’s feet were abruptly yanked up—
 
 —and Theodore’s back hit the ground with a surprisingly loud and *metallic*-sounding crash.
 
