--- a/068.md
+++ b/068.md
@@ -89,7 +89,7 @@ She was in the middle of trying to unravel a particularly convoluted answer when
 
 The young girl who entered her office had clearly been crying, and then afterward had washed her face in hopes it wouldn’t show—
 
-“Miss Granger!” said Professor McGonagall. It had taken her a moment to recognize that face with its eyes reddened and cheeks puffed. “What happened?”
+“Miss Granger!” said Professor McGonagall. It had taken her a moment to recognise that face with its eyes reddened and cheeks puffed. “What happened?”
 
 “Professor,” said the young girl in a wavering voice, “you said that if I was ever worried or uncomfortable about anything, I should come to you at once—”
 
@@ -161,7 +161,7 @@ The hot burning feeling was creeping up her throat again, along with helplessnes
 
 (The thought came to her a few seconds later that maybe she *did* in fact want to be a hero, but she decided not to change what she’d said.)
 
-“Ah,” said the old wizard. “That is a tall order, Miss Granger.” Dumbledore rose from his throne, stepped out behind his desk, and pointed to a symbol on the wall, so ubiquitous that Hermione’s eyes had glossed right over it; a faded shield on which was inscribed the heraldry of Hogwarts, the lion and snake, and badger and raven, and in Latin engraved words whose point she’d never understood. Then, as she realized where that shield was, and how old it looked, it suddenly occurred to Hermione that this might be the *original*—
+“Ah,” said the old wizard. “That is a tall order, Miss Granger.” Dumbledore rose from his throne, stepped out behind his desk, and pointed to a symbol on the wall, so ubiquitous that Hermione’s eyes had glossed right over it; a faded shield on which was inscribed the heraldry of Hogwarts, the lion and snake, and badger and raven, and in Latin engraved words whose point she’d never understood. Then, as she realised where that shield was, and how old it looked, it suddenly occurred to Hermione that this might be the *original*—
 
 “A Hufflepuff would say,” said Dumbledore, tapping his finger on the faded badger and making Hermione wince for the sacrilege (if it *was* the original), “that people fail to become who they are meant to be, because they are too lazy to put in all the work involved. A Ravenclaw,” tapping the raven, “would repeat those words that the wise know to be far older than Socrates, *know thyself,* and say that people fail to become who they are meant to be, through ignorance and lack of thought. And Salazar Slytherin,” Dumbledore frowned as his finger tapped the faded snake, “why, he said that we become who we are meant to be by following our desires wherever they lead. Perhaps he would say that people fail to become themselves because they refuse to do what is necessary to achieve their ambitions. But then one notes that nearly all of the Dark Wizards to come out of Hogwarts have been Slytherins. Did they become what they were meant to be? I think not.” Dumbledore’s finger tapped the lion, and then he turned toward her. “Tell me, Miss Granger, what would a Gryffindor say? I do not need to ask whether the Sorting Hat offered you that House.”
 
