--- a/069.md
+++ b/069.md
@@ -144,7 +144,7 @@ When she was done talking, Harry stared at her across the table and didn’t say
 
 *“Please* don’t take this the wrong way,” said Harry. He looked too-adult now, and grim. “But are you sure this is who *you* are, and not, to put it bluntly, me?”
 
-“I’m quite certain,” said Hermione. “Why, my name practically spells out ‘heroine’ except for the extra ’m’, I never noticed that until today.”
+“I’m quite certain,” said Hermione. “Why, my name practically spells out ‘heroine’ except for the extra ‘m’, I never noticed that until today.”
 
 “Being a hero isn’t all fun and games,” said Harry. “Not real heroing, the sort grownups have to do, it isn’t like this, it isn’t going to be this easy.”
 
