--- a/070.md
+++ b/070.md
@@ -79,7 +79,7 @@ Professor Sinistra snapped, “And I suppose that wizards don’t—”
 
 There was a bit of silence, for a time. Hermione put up her sign again—it had slipped down to her shoulder while she was listening. She’d never thought of that, not even a little, and now she was trying *not* to think of it, and her stomach was feeling a bit queasy. She looked in Harry Potter’s direction, not quite knowing why she did; and she saw that Harry’s face was perfectly still. A chill ran down her spine before she looked away, not quite fast enough to miss the small nod that Harry gave her, as though they were agreeing on something.
 
-“To be fair,” Professor Sinistra said after a while, “since I received my Hogwarts letter I can’t recall encountering any prejudice on account of being a woman, or colored. No, now it is all for being a Muggleborn. I believe Miss Granger said that it was *just* with heroes that she found a problem, so far?”
+“To be fair,” Professor Sinistra said after a while, “since I received my Hogwarts letter I can’t recall encountering any prejudice on account of being a woman, or coloured. No, now it is all for being a Muggleborn. I believe Miss Granger said that it was *just* with heroes that she found a problem, so far?”
 
 It took Hermione a moment to recognise that she’d been asked the question, and then she said “Yes,” in a tone that squeaked a little. This whole thing had blown up a bit larger than she’d imagined when she’d started it.
 
