--- a/071.md
+++ b/071.md
@@ -132,7 +132,7 @@ of school? He must’ve had *some* way of finding them.”
 
 Daphne happened to be standing where looking at Parvati let her see
 Hermione, so she noticed the Ravenclaw girl’s expression change—and
-then she realized that the Sunshine General had *also* found some
+then she realised that the Sunshine General had *also* found some
 bullies just recently—
 
 “Oh!” said Padma in a tone of sudden realization. “Of course! He got
@@ -259,7 +259,7 @@ do you know about this? *Who?”*
 Daphne just shook her head sadly with a downcast expression.
 
 *“Excuse me*,” said Hermione, and then when the others looked at her
-again, “Ah…” while she tried to organize her thoughts. “I mean, um…
+again, “Ah…” while she tried to organise her thoughts. “I mean, um…
 Hannah… trying to become a hero so that a boy will like you isn’t very
 *feminist*.”
 
