--- a/072.md
+++ b/072.md
@@ -214,7 +214,7 @@ It *was* the castle Hogwarts, after all.
 
 Behind the hastily Transfigured thin panels they’d assembled into the outward appearance of a brick wall, the girls waited; not speaking, not moving, hardly even breathing, but watching through the eyeholes they’d left themselves.
 
-As Susan’s gaze took in the bully, she could feel the tightening of her chest all the way into her toes. The boy looked to be in his seventh-year if not *older*, and his robes were trimmed in green instead of the red they’d been hoping for, and he had *muscles*, and after staring for a bit longer, Susan realized his stance had the balance that meant that he *duelled*.
+As Susan’s gaze took in the bully, she could feel the tightening of her chest all the way into her toes. The boy looked to be in his seventh-year if not *older*, and his robes were trimmed in green instead of the red they’d been hoping for, and he had *muscles*, and after staring for a bit longer, Susan realised his stance had the balance that meant that he *duelled*.
 
 Then they all heard the sound of more feet approaching from the corridor. The fourth-year Gryffindors and Slytherins had just been let out of Potions class.
 
@@ -230,7 +230,7 @@ And then, as there approached the faintly audible sound of one last set of foots
 
 Someone *did* gasp then, though fortunately very very quietly. If they couldn’t get in even a single shot—
 
-The bullies were learning *already*, Susan realized, she hadn’t expected S.P.H.E.W. to be able to do this very often before the bullies caught on—but—Hermione had already defeated three bullies—and the school had been buzzing with speculation about Salazar Slytherin’s ghost, yesterday—
+The bullies were learning *already*, Susan realised, she hadn’t expected S.P.H.E.W. to be able to do this very often before the bullies caught on—but—Hermione had already defeated three bullies—and the school had been buzzing with speculation about Salazar Slytherin’s ghost, yesterday—
 
 *He’s expecting us!*
 
@@ -352,7 +352,7 @@ Then the applause started.
 
 It was scattered, not the massive applause of everyone applauding at once. A lot of it came from the Gryffindor table, less from Hufflepuff and Ravenclaw, and none from Slytherin.
 
-Daphne felt her face tightening. She’d *hoped*—well, maybe after they found a Gryffindor bully to stop and a Slytherin to rescue, her fellow Slytherins would realize—
+Daphne felt her face tightening. She’d *hoped*—well, maybe after they found a Gryffindor bully to stop and a Slytherin to rescue, her fellow Slytherins would realise—
 
 She looked at the Hufflepuff table.
 
@@ -388,7 +388,7 @@ Then Flint’s powerful voice, the voice of the Slytherin Captain that bellowed 
 
 Another moment of frozen silence. Hermione’s head—Daphne could see it trembling—turned to look at the Slytherin Quidditch Captain.
 
-“Apologize to me,” said Flint.
+“Apologise to me,” said Flint.
 
 Harry Potter started to push himself up from the Ravenclaw table, and then stopped abruptly, halfway to his feet, as if he’d just thought of something—
 
@@ -434,7 +434,7 @@ From all sides of the long Slytherin table, angry faces stared at Draco.
 
 But they were outnumbered by the faces that just looked puzzled.
 
-“All right, I give up,” said a sixth-year boy that Draco didn’t recognize, sitting across from him and two places to his right. “Why did you do that, Malfoy?”
+“All right, I give up,” said a sixth-year boy that Draco didn’t recognise, sitting across from him and two places to his right. “Why did you do that, Malfoy?”
 
 Although his mouth was very dry, Draco didn’t swallow. That would have been a sign of fear. Instead he took a bite of carrots, which had the most moisture of anything on his plate, and chewed and swallowed, thinking as rapidly as he could.
 
