--- a/073.md
+++ b/073.md
@@ -112,7 +112,7 @@ The other Ravenclaw girl just tore right out of there without arguing. Daphne wa
 
 They all whirled, and looked, and saw—
 
-*Three* older bullies, Daphne’s eyes recognized Reese Belka who was a top lieutenant in one of the seventh-year armies, and Randolph Lee who was number two in the Hogwarts dueling club, and worst of all, Robert Jugson III, in his sixth year, whose father was almost certainly a Death Eater.
+*Three* older bullies, Daphne’s eyes recognised Reese Belka who was a top lieutenant in one of the seventh-year armies, and Randolph Lee who was number two in the Hogwarts dueling club, and worst of all, Robert Jugson III, in his sixth year, whose father was almost certainly a Death Eater.
 
 All three were surrounded by Shielding Charms, blue hazes that glowed beneath the surface in ribbons of other colour and showed occasional faceting above, multi-layered shields like the three of them thought they were fighting serious duelists and had expended energy accordingly.
 
