--- a/075.md
+++ b/075.md
@@ -120,7 +120,7 @@ And so before long Hermione Granger had turned to the only person left she could
 
 “They’re all mad,” said Hermione Granger as she strode vigorously toward Ravenclaw tower, having left dinner a bit early. “Everyone except you and me, Harry, I mean *everyone* except us in this whole school of Hogwarts, they’re all entirely *mad.* And Ravenclaw girls are the *worst,* I don’t know *what* Ravenclaw girls go reading when they get older, but I’m certain they ought not to be reading it. One witch asked me if the two of us had soul-bonded, which I’m going to look up in the library tonight, but I’m pretty sure has never actually happened—”
 
-“I don’t even know a *name* for this kind of fallacious reasoning,” said Harry Potter. The boy was walking normally, which meant he often had to skip forward a few steps to match her own indignation-fueled speed. “I seriously think if it was up to *them*, they’d be dragging us off this minute to get our names changed to Potter-Evans-Verres-Granger… Ugh, saying that out loud makes me realize how awful it sounds.”
+“I don’t even know a *name* for this kind of fallacious reasoning,” said Harry Potter. The boy was walking normally, which meant he often had to skip forward a few steps to match her own indignation-fueled speed. “I seriously think if it was up to *them*, they’d be dragging us off this minute to get our names changed to Potter-Evans-Verres-Granger… Ugh, saying that out loud makes me realise how awful it sounds.”
 
 “You mean *your* name would be Potter-Evans-Verres-Granger and *mine* would be Granger-Potter-Evans-Verres,” said Hermione. “It’s too horrible to imagine.”
 
