--- a/078.md
+++ b/078.md
@@ -272,7 +272,7 @@ Draco thought about this, not noticing that he’d stopped marching or that all 
 
 “Um…” Gregory said. “They were… greenish, maybe?”
 
-“Okay,” said Draco. Again without thinking, he began walking once more and his Dragons followed. “Here’s our new strategy. We’re only going to send eleven Dragons against the Chaos Legion, not fourteen. That should be enough to beat them, now that we can neutralize their special advantage.” It was a gamble, but you had to take gambles sometimes, if you wanted to come in first in a three-way battle.
+“Okay,” said Draco. Again without thinking, he began walking once more and his Dragons followed. “Here’s our new strategy. We’re only going to send eleven Dragons against the Chaos Legion, not fourteen. That should be enough to beat them, now that we can neutralise their special advantage.” It was a gamble, but you had to take gambles sometimes, if you wanted to come in first in a three-way battle.
 
 “You figured out Chaos’s plan, General Malfoy?” said Mr. Thomas with considerable surprise.
 
@@ -284,7 +284,7 @@ Draco thought about this, not noticing that he’d stopped marching or that all 
 
 Harry, having now finished his cauldron, was carefully scooping acorns into the container while the scouts searched for a nearby source of water that could be used as a liquid base. They’d come across frequent sinkholes and miniature creeks in the forest before, so it ought not to take long. Another scout had brought a straight stick that would serve as a stirrer, so Harry didn’t have to Transfigure one.
 
-Sometimes, even though you were looking straight at something, you didn’t realize *what* you were looking at until you happened to ask exactly the right question…
+Sometimes, even though you were looking straight at something, you didn’t realise *what* you were looking at until you happened to ask exactly the right question…
 
 *How can I invoke magical powers that ought to be beyond the reach of first-year students?*
 
