--- a/079.md
+++ b/079.md
@@ -367,7 +367,7 @@ Both of them were her friends, maybe the two best friends she had.
 
 Padma stared down at her plate. She was glad the Sorting Hat hadn’t offered her Hufflepuff. If she’d been Sorted into Hufflepuff it would probably have been much more painful, trying to decide where her divided loyalties lay…
 
-She blinked and realized that her vision had gotten blurry again, and raised a trembling hand to wipe once more at her eyes.
+She blinked and realised that her vision had gotten blurry again, and raised a trembling hand to wipe once more at her eyes.
 
 Morag MacDougal snorted so loudly it was audible even amid the pandemonium of lunch, and said in a loud voice, “I bet Granger *cheated* in her battle yesterday, I bet that’s why Malfoy challenged her-”
 
@@ -387,7 +387,7 @@ The look that came over Harry Potter’s face then made Padma flinch.
 
 “What are you *blithering* about?” said Morag, looking down her nose at the Boy-Who-Lived.
 
-“You think we’d believe anything *you* say?” yelled a slightly older-looking Ravenclaw witch who Padma didn’t recognize. “When *you* turned Granger Dark?”
+“You think we’d believe anything *you* say?” yelled a slightly older-looking Ravenclaw witch who Padma didn’t recognise. “When *you* turned Granger Dark?”
 
 “And I’m not going to complain,” Harry Potter said in an eerily calm voice, “about wizards not having any logic and believing the craziest things. Because I said that to Professor Quirrell once, and he just gave me this *look* and said that if I wasn’t blinded by my upbringing I could think of a hundred more ridiculous things that lots of Muggles believe. What you’re all doing is very human and very normal and doesn’t make you *unusually* bad people, so I’m not going to complain.” The Boy-Who-Lived rose up from his bench. “I’ll see you all later.”
 
