--- a/081.md
+++ b/081.md
@@ -16,7 +16,7 @@ only-half-cold Harry had somehow not realised…
 
 “The vote carries, in favour,” intoned the secretary, when all the
 tallying was done, and the upraised hands fell back down. “The
-Wizengamot recognizes the blood debt owed by Hermione Granger to House
+Wizengamot recognises the blood debt owed by Hermione Granger to House
 Malfoy for the attempted murder of its scion and ending of its line.”
 
 Lucius Malfoy was smiling in grim satisfaction. “And now,” said the
