--- a/080.md
+++ b/080.md
@@ -34,7 +34,7 @@ Harry had read the *Daily Prophet* that morning. The headline had been “MAD MU
 
 Harry had always possessed that sense of hollowness about political indignation, but it was strange how very much more obvious it seemed, when you were reading a dozen articles in the *Daily Prophet* beating on Hermione Granger.
 
-The leading article, written by some name that Harry didn’t recognise, had called for the minimum age for Azkaban to be lowered, just so that the twisted mudblood who had defaced the honor of Scotland with her savage, unprovoked attack upon the last heir of a Most Ancient House within the sacred refuge of Hogwarts could be sent to the Dementors that were the only punishment commensurate with the severity of her unspeakable crime. Only this would be enough to discourage any other foreign, subhuman brutes who similarly believed in their twisted insanity that they could evade the majesty of the Wizengamot’s inevitable and merciless scourging of all that threatened the honourable nobility of etcetera etcetera etcetera.
+The leading article, written by some name that Harry didn’t recognise, had called for the minimum age for Azkaban to be lowered, just so that the twisted mudblood who had defaced the honour of Scotland with her savage, unprovoked attack upon the last heir of a Most Ancient House within the sacred refuge of Hogwarts could be sent to the Dementors that were the only punishment commensurate with the severity of her unspeakable crime. Only this would be enough to discourage any other foreign, subhuman brutes who similarly believed in their twisted insanity that they could evade the majesty of the Wizengamot’s inevitable and merciless scourging of all that threatened the honourable nobility of etcetera etcetera etcetera.
 
 The next article had said the same thing in less eloquent words.
 
