--- a/084.md
+++ b/084.md
@@ -339,7 +339,7 @@ It was so *normal* for the way she and Harry usually talked that she felt a sudd
 
 “Remember Asch’s conformity experiment?” Harry said, turning his head to give her a serious look.
 
-Her mind was *slow to remember* for a few seconds, which frightened her, but then the reference came back. In 1951, Solomon Asch had taken some experimental subjects, and each one had been put among a row of other people who looked like them, seeming like other experimental subjects, but actually confederates of the experimenter. They’d shown a reference line on a screen, labeled X, next to three other lines, labeled A, B, and C. The experimenter had asked which line X was the same length as. The correct answer had obviously been C. The other ’subjects', the confederates, had one after another said that X was the same length as B. The real subject had been put second-to-last in the order, so as not to arouse suspicion by being last. The test had been to see whether the real subject would ‘conform’ to the standard wrong answer of B, or voice the obviously correct answer of C.
+Her mind was *slow to remember* for a few seconds, which frightened her, but then the reference came back. In 1951, Solomon Asch had taken some experimental subjects, and each one had been put among a row of other people who looked like them, seeming like other experimental subjects, but actually confederates of the experimenter. They’d shown a reference line on a screen, labeled X, next to three other lines, labeled A, B, and C. The experimenter had asked which line X was the same length as. The correct answer had obviously been C. The other ‘subjects’, the confederates, had one after another said that X was the same length as B. The real subject had been put second-to-last in the order, so as not to arouse suspicion by being last. The test had been to see whether the real subject would ‘conform’ to the standard wrong answer of B, or voice the obviously correct answer of C.
 
 75% of the subjects had ‘conformed’ at least once. A third of the subjects had conformed more than half the time. Some had reported afterward actually believing that X was the same length as B. And that had been in a case where the subjects hadn’t known any of the confederates. If you put people around others who belonged to the same group as them, like someone in a wheelchair next to other people in a wheelchair, the conformity effect got even stronger…
 
