Missed “typewriter quotes” in 13, 58, and 86.

--- a/013.md
+++ b/013.md
@@ -102,7 +102,7 @@ The reverse side read:
 *You start with 100 points.*  
 *Begin.*
 
-Harry stared at the “instructions". This side wasn’t handwritten; the writing was perfectly regular, hence artificial. It looked as if it had been inscribed by a Quotes Quill, such as the one he’d bought to take dictation.
+Harry stared at the “instructions”. This side wasn’t handwritten; the writing was perfectly regular, hence artificial. It looked as if it had been inscribed by a Quotes Quill, such as the one he’d bought to take dictation.
 
 He had *absolutely no clue* what was going on.
 
@@ -145,7 +145,7 @@ YOU HAVE GAINED: A BOX OF CEREAL BARS
 
 Again, silence.
 
-Harry put his hand into the pouch and said “cereal bars".
+Harry put his hand into the pouch and said “cereal bars.”
 
 Nothing came up.
 
