--- a/058.md
+++ b/058.md
@@ -171,7 +171,7 @@ Harry turned to Bellatrix; he opened his mouth to instruct her a final time—
 
 And there was a hiss, a weak hiss, a hiss that sounded slow and confused, and the hiss said,
 
-*"What wass… that noisse?”*
+*“What wass… that noisse?”*
 
 * * * * *
 
@@ -227,7 +227,7 @@ Harry explained. Parseltongue didn’t have words for the Muggle technology, but
 
 There were a few short hisses, the snakish equivalent of a bark of surprised laughter, and then, snapped commands. *“Tell woman to look away, casst sspell of ssilence, sset guardian Charm outside door. Will transsform mysself, make few sswift improvementss to your invention, give woman emergency potion sso sshe can sshield uss, transsform back before you disspell Charm. Plan will be ssafer, then.”*
 
-*“And am I to believe,”* Harry hissed, *"that healer for woman truly awaitss uss?”*
+*“And am I to believe,”* Harry hissed, *“that healer for woman truly awaitss uss?”*
 
 *“Usse ssensse, boy! Ssupposse I am evil. To end usse of you here iss obvioussly not what I planned. Misssion iss target of opportunity, invented after ssaw your guardian Charm, whole affair meant to be unnoticed, hid when left eating-place. Obvioussly you will ssee persson pretending to be healer on arrival! Go back to eating-place afterward, original plan carriess on undissturbed!”*
 
