--- a/086.md
+++ b/086.md
@@ -547,7 +547,7 @@ Severus gave a single chuckle. “Mr. Potter has his points, I must confess,” 
 
 Mad-Eye’s own chuckle was lower and grimmer. “Oh, yes,” said Mad-Eye. “Only fools duel. Standing like that and waiting for me to attack, what *was* the boy thinking? Why, I ought to give him a scar, to remember this occasion—”
 
-“Alastor!” barked Albus, just as she cried “Stop!", Severus dashed forward, and Mad-Eye Moody deliberately levelled his wand on Harry Potter’s body.
+“Alastor!” barked Albus, just as she cried “Stop!”, Severus dashed forward, and Mad-Eye Moody deliberately levelled his wand on Harry Potter’s body.
 
 *“Stupefy!”*
 
